Fixed show a progress when load the next messages. Modified a logic of the emails list. | #31.

--- a/FlowCrypt/src/main/res/layout/fragment_email_list.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_email_list.xml
@@ -26,6 +26,7 @@
             android:id="@+id/listViewMessages"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:overScrollFooter="@android:color/transparent"
             android:visibility="gone" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
