--- a/FlowCrypt/src/main/res/menu/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/menu/fragment_message_details.xml
@@ -10,12 +10,12 @@
     <item
         android:id="@+id/menuActionArchiveMessage"
         android:icon="@mipmap/ic_archive_message_white"
-        android:title="@string/send"
+        android:title="@string/archive"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/menuActionDeleteMessage"
         android:icon="@mipmap/ic_delete_message_white"
-        android:title="@string/send"
+        android:title="@string/delete"
         app:showAsAction="ifRoom" />
 </menu>
