Added handle errors from the EmailSyncService in the message details screen. Refactored code. | #31

--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -24,4 +24,8 @@
     <item name="syns_request_delete_message" type="id" />
     <item name="syns_request_send_encrypted_message" type="id" />
 
+    <item name="viewIdProgressView" type="id" />
+    <item name="viewIdStatusView" type="id" />
+    <item name="viewIdTextViewStatusInfo" type="id" />
+
 </resources>
