--- a/FlowCrypt/src/main/res/layout/fragment_email_list.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_email_list.xml
@@ -5,8 +5,6 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -34,43 +32,19 @@
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@id/viewIdProgressView"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:visibility="gone" />
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/layoutStatus"
+    <include
+        android:id="@+id/viewIdStatusView"
+        layout="@layout/sync_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/imageViewWarning"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_margin_content_small"
-            android:contentDescription="@string/warning"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_warning" />
-
-        <TextView
-            android:id="@+id/textViewStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/default_margin_content_small"
-            android:layout_marginRight="@dimen/default_margin_content_small"
-            android:layout_marginTop="@dimen/default_margin_content_small"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewWarning"
-            tools:text="No connection" />
-    </android.support.constraint.ConstraintLayout>
+        android:visibility="gone" />
 
 </FrameLayout>
