--- a/FlowCrypt/src/main/res/layout/fragment_secure_compose.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_secure_compose.xml
@@ -15,7 +15,7 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@id/viewIdProgressView"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/editTextEmailSubject"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -80,7 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/editTextEmailMessage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -90,4 +90,12 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <include
+        android:id="@+id/viewIdStatusView"
+        layout="@layout/sync_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 </FrameLayout>
