--- a/FlowCrypt/src/main/res/layout/activity_backup_settings.xml
+++ b/FlowCrypt/src/main/res/layout/activity_backup_settings.xml
@@ -98,6 +98,14 @@
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
 
+        <include
+            android:id="@+id/layoutSyncStatus"
+            layout="@layout/sync_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+
     </FrameLayout>
 
 </LinearLayout>
