Added LeakCanary to fix problems with memory leaks. Added a writer of REST logs to sd card for debugging HTTP requests. | Close #9, Close #7.

--- a/FlowCrypt/src/main/res/menu/activity_email_manager_drawer.xml
+++ b/FlowCrypt/src/main/res/menu/activity_email_manager_drawer.xml
@@ -32,4 +32,9 @@
         android:id="@+id/navigationMenuActionSettings"
         android:icon="@mipmap/ic_settings"
         android:title="@string/action_settings" />
+
+    <item
+        android:id="@+id/navigationMenuDevSettings"
+        android:icon="@mipmap/ic_settings"
+        android:title="@string/action_dev_settings" />
 </menu>
