Used TextInputEditText in RestoreAccountFragment.

--- a/FlowCrypt/src/main/res/layout/fragment_restore_account.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_restore_account.xml
@@ -45,23 +45,32 @@
         android:layout_marginBottom="@dimen/default_margin_content"
         android:layout_marginTop="@dimen/default_margin_content"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/editTextKeyPassword"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutKeyPassword"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
         app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
         app:layout_constraintTop_toBottomOf="@+id/textViewFoundBackup" />
 
-    <EditText
-        android:id="@+id/editTextKeyPassword"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayoutKeyPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_top_key_password"
-        android:ems="10"
-        android:hint="@string/enter_your_pass_phrase"
-        android:inputType="textPassword"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
         app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-        app:layout_constraintTop_toBottomOf="@+id/textViewFoundBackup" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewFoundBackup"
+        app:passwordToggleContentDescription="description"
+        app:passwordToggleEnabled="true">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editTextKeyPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/enter_your_pass_phrase"
+            android:inputType="textPassword" />
+
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/buttonLoadAccount"
@@ -73,7 +82,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
         app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-        app:layout_constraintTop_toBottomOf="@+id/editTextKeyPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutKeyPassword" />
 
     <Button
         android:id="@+id/buttonSelectAnotherAccount"
