--- a/FlowCrypt/src/main/res/layout/fragment_splash.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_splash.xml
@@ -9,8 +9,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.flowcrypt.email.ui.activity.fragment.SplashActivityFragment"
-    tools:showIn="@layout/activity_splash">
+    tools:context="com.flowcrypt.email.ui.activity.fragment.SplashActivityFragment">
 
     <Button
         android:id="@+id/buttonPrivacy"
@@ -48,25 +47,30 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintTop_creator="1" />
 
-    <TextView
-        android:id="@+id/textViewCrypt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/imageViewLogo"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:layout_gravity="center"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="54dp"
         android:drawableEnd="@mipmap/ic_crypt_up"
         android:drawablePadding="@dimen/default_margin_medium"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
+        android:scaleType="center"
+        android:scaleX="7"
+        android:scaleY="7"
         android:text="@string/crypt"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textSize="@dimen/text_size_logo_crypt"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonTerms" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonTerms"
+        app:srcCompat="@mipmap/ic_flowcrypt_logo"
+        tools:layout_editor_absoluteX="-153dp" />
 
     <TextView
         android:id="@+id/textViewConnectYourEmail"
@@ -81,7 +85,7 @@
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCrypt"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
         app:layout_constraintVertical_bias="0.23000002"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
