--- a/FlowCrypt/src/main/res/layout/splash_after_auth.xml
+++ b/FlowCrypt/src/main/res/layout/splash_after_auth.xml
@@ -34,12 +34,11 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="149dp"
-        android:layout_height="145dp"
-        android:layout_marginTop="150dp"
-        app:layout_constraintHorizontal_bias="0.502"
+        android:layout_width="256dp"
+        android:layout_height="256dp"
+        android:layout_marginTop="68dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@mipmap/ic_launcher_round" />
 </android.support.constraint.ConstraintLayout>
