--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -45,4 +45,5 @@
     <dimen name="size_of_small_progressbar">16dp</dimen>
     <dimen name="margin_top_fisrt_button">96dp</dimen>
     <dimen name="margin_between_buttons">32dp</dimen>
+    <dimen name="user_photo_size">48dp</dimen>
 </resources>
