--- a/FlowCrypt/src/main/res/values/colors.xml
+++ b/FlowCrypt/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="la_palma">#31A217</color>
     <color name="dove_gray">#666666</color>
     <color name="white_transparent">#A0FFFFFF</color>
+    <color name="gallery">#F0F0F0</color>
 </resources>
