Added display the styled message block (TYPE_PGP_PUBLIC_KEY). | #37.

--- a/FlowCrypt/src/main/res/values/colors.xml
+++ b/FlowCrypt/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="dove_gray">#666666</color>
     <color name="white_transparent">#A0FFFFFF</color>
     <color name="gallery">#F0F0F0</color>
+    <color name="dusty_gray">#989898</color>
 </resources>
