Added inputType="textCapSentences|textMultiLine" to the input message field on the compose/reply screen. | Close #42.

--- a/FlowCrypt/src/main/res/layout/fragment_secure_compose.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_secure_compose.xml
@@ -84,7 +84,8 @@
                     android:id="@+id/editTextEmailMessage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_compose_security_email" />
+                    android:hint="@string/prompt_compose_security_email"
+                    android:inputType="textCapSentences|textMultiLine" />
 
             </android.support.design.widget.TextInputLayout>
 
