--- a/FlowCrypt/src/main/res/layout/message_part_public_key.xml
+++ b/FlowCrypt/src/main/res/layout/message_part_public_key.xml
@@ -4,8 +4,7 @@
   ~ Contributors: DenBond7
   -->
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,34 +14,71 @@
 
     <TextView
         android:id="@+id/textViewKeyOwnerTemplate"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_margin_content_small"
         android:textIsSelectable="true"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:text="This message includes a Public Key for tom@bitoasis.net." />
 
     <TextView
         android:id="@+id/textViewKeyWordsTemplate"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_margin_content"
         android:textIsSelectable="true"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewKeyOwnerTemplate"
         tools:text="KeyWords: ASK REFORM DEPEND TOWER ACTOR DIAGRAM " />
 
     <TextView
         android:id="@+id/textViewFingerprintTemplate"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_margin_content_small"
         android:textIsSelectable="true"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewKeyWordsTemplate"
         tools:text="(Fingerprint: 8B8A 05A2 216E E6E4 C5EE 3D54 0D56 88EB F310 2BE7)" />
-</android.support.constraint.ConstraintLayout>
+
+    <Switch
+        android:id="@+id/switchShowPublicKey"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/default_margin_content_small"
+        android:checked="false"
+        android:switchPadding="@dimen/default_margin_small"
+        android:text="@string/show_the_public_key" />
+
+    <TextView
+        android:id="@+id/textViewPgpPublicKey"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/default_margin_content_small"
+        android:textColor="#088447"
+        android:textIsSelectable="true"
+        android:visibility="gone"
+        tools:text="(Fingerprint: 8B8A 05A2 216E E6E4 C5EE 3D54 0D56 88EB F310 2BE7)"
+        tools:visibility="visible" />
+
+    <Button
+        android:id="@+id/buttonSaveContact"
+        style="@style/AppWidget.Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/default_margin_content_small"
+        android:layout_marginTop="@dimen/default_margin_content_small"
+        android:text="@string/save_contact"
+        android:theme="@style/AppWidget.Button.Raised.Green"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
+    <Button
+        android:id="@+id/buttonUpdateContact"
+        style="@style/AppWidget.Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/default_margin_content_small"
+        android:layout_marginTop="@dimen/default_margin_content_small"
+        android:text="@string/update_contact"
+        android:theme="@style/AppWidget.Button.Raised.Green"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
+</LinearLayout>
