--- a/FlowCrypt/src/main/res/layout/activity_restore_account.xml
+++ b/FlowCrypt/src/main/res/layout/activity_restore_account.xml
@@ -9,7 +9,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.flowcrypt.email.ui.activity.RestoreAccountActivity">
+    tools:context="com.flowcrypt.email.ui.activity.LoadPrivateKeysBackupFromGmailActivity">
 
     <include
         android:id="@+id/restoreAccountView"
