--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -17,6 +17,7 @@
     <dimen name="default_margin_small">5dp</dimen>
     <dimen name="default_margin_medium">10dp</dimen>
     <dimen name="default_margin_big">15dp</dimen>
+    <dimen name="default_margin_very_big">20dp</dimen>
 
     <dimen name="default_text_size_big">18sp</dimen>
     <dimen name="default_text_size_medium">16sp</dimen>
@@ -46,4 +47,5 @@
     <dimen name="margin_top_first_button">96dp</dimen>
     <dimen name="margin_between_buttons">32dp</dimen>
     <dimen name="user_photo_size">48dp</dimen>
+    <dimen name="margin_top_splash_icon">68dp</dimen>
 </resources>
