--- a/FlowCrypt/src/main/res/layout/activity_secure_compose.xml
+++ b/FlowCrypt/src/main/res/layout/activity_secure_compose.xml
@@ -6,6 +6,7 @@
 
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/screenContent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.flowcrypt.email.ui.activity.SecureComposeActivity">
