--- a/FlowCrypt/src/main/res/values/colors.xml
+++ b/FlowCrypt/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="white_transparent">#A0FFFFFF</color>
     <color name="gallery">#F0F0F0</color>
     <color name="dusty_gray">#989898</color>
+    <color name="valencia">#D14836</color>
 </resources>
