--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="default_single_dip">1dp</dimen>
 
     <dimen name="default_button_height">64dp</dimen>
+    <dimen name="default_height_for_click">64dp</dimen>
 
     <dimen name="default_margin_small">5dp</dimen>
     <dimen name="default_margin_medium">10dp</dimen>
