--- a/FlowCrypt/src/main/res/menu/activity_send_message.xml
+++ b/FlowCrypt/src/main/res/menu/activity_send_message.xml
@@ -6,16 +6,17 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <item
-        android:id="@+id/menuActionAttachFile"
-        android:icon="@mipmap/ic_action_attach_file"
-        android:title="@string/attach_file"
+        android:id="@+id/menuActionSwitchType"
+        android:icon="@mipmap/ic_action_switch"
+        android:orderInCategory="100"
+        android:title="@string/switch_to_standard_email"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/menuActionSend"
-        android:icon="@mipmap/ic_action_send"
-        android:title="@string/send"
+        android:id="@+id/menuActionHelp"
+        android:icon="@mipmap/ic_help"
+        android:orderInCategory="101"
+        android:title="@string/help"
         app:showAsAction="ifRoom" />
 </menu>
