--- a/FlowCrypt/src/main/res/layout/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_message_details.xml
@@ -73,38 +73,17 @@
                 app:layout_constraintTop_toTopOf="@+id/textViewSubject"
                 tools:text="1:05 PM" />
 
-            <LinearLayout
+            <View
                 android:id="@+id/layoutFooterOfHeader"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/height_silver_line"
+                android:layout_gravity="center"
                 android:layout_marginTop="@dimen/default_margin_medium"
+                android:layout_weight="1"
+                android:background="@color/silver"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewSubject">
-
-                <View
-                    android:layout_width="@dimen/default_margin_medium"
-                    android:layout_height="@dimen/height_silver_line"
-                    android:layout_gravity="center"
-                    android:background="@color/silver" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/default_margin_medium"
-                    android:layout_marginRight="@dimen/default_margin_medium"
-                    android:contentDescription="@string/lock"
-                    android:src="@mipmap/ic_lock" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/height_silver_line"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:background="@color/silver" />
-
-            </LinearLayout>
+                app:layout_constraintTop_toBottomOf="@+id/textViewSubject" />
 
             <LinearLayout
                 android:id="@+id/layoutMessageParts"
