--- a/FlowCrypt/src/main/res/menu/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/menu/fragment_message_details.xml
@@ -18,4 +18,10 @@
         android:icon="@mipmap/ic_delete_message_white"
         android:title="@string/delete"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/menuActionMoveToInbox"
+        android:icon="@mipmap/ic_move_to_inbox"
+        android:title="@string/move_to_inbox"
+        app:showAsAction="ifRoom" />
 </menu>
