--- a/FlowCrypt/src/main/res/layout/messages_list_item.xml
+++ b/FlowCrypt/src/main/res/layout/messages_list_item.xml
@@ -19,28 +19,38 @@
         android:maxLines="1"
         android:textColor="@color/scorpion"
         android:textSize="@dimen/default_text_size_big"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewDate"
         app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toLeftOf="@+id/textViewDate"
+        app:layout_constraintRight_toLeftOf="@+id/imageViewAttachments"
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
         tools:text="tom@cryptup.org" />
+
+    <ImageView
+        android:id="@+id/imageViewAttachments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/default_margin_small"
+        android:layout_marginTop="0dp"
+        android:contentDescription="@string/attachment"
+        app:layout_constraintLeft_toRightOf="@+id/textViewSenderAddress"
+        app:layout_constraintRight_toLeftOf="@+id/textViewDate"
+        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
+        app:srcCompat="@mipmap/ic_attachment" />
 
     <TextView
         android:id="@+id/textViewSubject"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
         android:layout_marginTop="@dimen/margin_top_message_subject"
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="@color/gray"
         android:textSize="@dimen/default_text_size_medium"
         app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toLeftOf="@+id/textViewDate"
+        app:layout_constraintRight_toLeftOf="@+id/imageViewAttachments"
         app:layout_constraintTop_toBottomOf="@+id/textViewSenderAddress"
         app:layout_constraintVertical_bias="0.0"
         tools:text="What up man" />
@@ -49,11 +59,11 @@
         android:id="@+id/textViewDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
         android:textColor="@color/gray"
         android:textSize="@dimen/default_text_size_medium"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewAttachments"
         app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
+        app:layout_constraintTop_toTopOf="@+id/imageViewAttachments"
         tools:text="1:05 PM" />
 
     <android.support.constraint.Guideline
