updated colors + buttons + headings | #77

--- a/FlowCrypt/src/main/res/drawable/bg_message_part_other.xml
+++ b/FlowCrypt/src/main/res/drawable/bg_message_part_other.xml
@@ -22,7 +22,7 @@
     <item android:gravity="left">
         <shape>
             <size android:width="4dp" />
-            <solid android:color="@color/dusty_gray" />
+            <solid android:color="@color/gray" />
         </shape>
     </item>
 
