--- a/FlowCrypt/src/main/res/layout/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_message_details.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/mine_shaft"
+                android:textColor="@color/dark"
                 android:textSize="@dimen/default_text_size_big"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
@@ -55,7 +55,7 @@
                 android:layout_marginTop="@dimen/margin_top_message_subject"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:textColor="@color/mine_shaft"
+                android:textColor="@color/dark"
                 android:textSize="@dimen/default_text_size_medium"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
@@ -67,7 +67,7 @@
                 android:id="@+id/textViewDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/mine_shaft"
+                android:textColor="@color/dark"
                 android:textSize="@dimen/default_text_size_medium"
                 app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
                 app:layout_constraintTop_toTopOf="@+id/textViewSubject"
