--- a/FlowCrypt/src/main/res/drawable/bg_message_part_pgp_message.xml
+++ b/FlowCrypt/src/main/res/drawable/bg_message_part_pgp_message.xml
@@ -27,7 +27,7 @@
     <item android:gravity="left">
         <shape>
             <size android:width="4dp" />
-            <solid android:color="@color/la_palma" />
+            <solid android:color="@color/colorPrimary" />
         </shape>
     </item>
 
