--- a/FlowCrypt/src/main/res/layout/fragment_splash.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_splash.xml
@@ -10,7 +10,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.flowcrypt.email.ui.activity.fragment.SplashActivityFragment"
-    tools:showIn="@layout/activity_splash">
+
+    >
+    <!--tools:showIn="@layout/activity_splash"-->
 
     <Button
         android:id="@+id/buttonPrivacy"
@@ -61,6 +63,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="@dimen/text_size_logo_crypt"
+        android:contentDescription="@string/app_name"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -89,11 +92,11 @@
 
     <Button
         android:id="@+id/buttonSignInWithGmail"
-        style="@style/AppWidget.Button.MainScreenSignButton"
+        style="@style/AppWidget.Button.White.ConnectAccount"
         android:layout_marginTop="@dimen/margin_top_main_screen_button_sign_via_gmail"
         android:drawableStart="@mipmap/ic_gmail"
         android:text="@string/continue_with_gmail"
-        android:theme="@style/AppWidget.Button.MainScreenSignButton"
+        android:theme="@style/AppWidget.Button.White.ConnectAccount"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewConnectYourEmail"
