--- a/FlowCrypt/src/main/res/layout/key_item.xml
+++ b/FlowCrypt/src/main/res/layout/key_item.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@color/scorpion"
+        android:textColor="@color/dark"
         android:textSize="@dimen/default_text_size_big"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
@@ -35,7 +35,7 @@
         android:layout_marginTop="@dimen/margin_top_message_subject"
         android:ellipsize="end"
         android:maxLines="2"
-        android:textColor="@color/la_palma"
+        android:textColor="@color/colorPrimary"
         android:textSize="@dimen/default_text_size_medium"
         app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
         app:layout_constraintHorizontal_bias="0.0"
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
-        android:textColor="@color/scorpion"
+        android:textColor="@color/dark"
         android:textSize="@dimen/default_text_size_medium"
         app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
