--- a/FlowCrypt/src/main/res/layout/under_toolbar_line_with_text.xml
+++ b/FlowCrypt/src/main/res/layout/under_toolbar_line_with_text.xml
@@ -9,7 +9,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:background="@color/valencia">
+    tools:background="@color/red">
 
     <TextView
         android:id="@+id/underToolbarTextTextView"
