--- a/FlowCrypt/src/main/res/values/styles.xml
+++ b/FlowCrypt/src/main/res/values/styles.xml
@@ -10,12 +10,17 @@
 
     <style name="AppWidget.Button">
         <item name="android:layout_height">@dimen/default_button_height</item>
-        <item name="android:textAllCaps">false</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
-    <style name="AppWidget.Button.WhiteText">
-        <item name="android:textAllCaps">true</item>
+    <style name="AppWidget.Button.Green">
         <item name="android:textColor">@android:color/white</item>
+        <item name="colorButtonNormal">@color/colorPrimary</item>
+    </style>
+
+    <style name="AppWidget.Button.White">
+        <item name="android:textColor">@color/dark</item>
+        <item name="colorButtonNormal">@android:color/white</item>
     </style>
 
     <style name="AppWidget.Button.Transparent">
@@ -23,34 +28,29 @@
     </style>
 
     <style name="AppWidget.Button.Transparent.MainScreenTopButton">
-        <item name="android:textColor">@color/silver_chalice</item>
+        <item name="android:textColor">@color/silver</item>
         <item name="android:textSize">@dimen/default_text_size_big</item>
     </style>
 
-    <style name="AppWidget.Button.MainScreenSignButton">
+    <style name="AppWidget.Button.White.ConnectAccount">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:paddingLeft">@dimen/padding_left_main_screen_sign_button</item>
         <item name="android:paddingRight">@dimen/padding_right_main_screen_sign_button</item>
         <item name="android:drawablePadding">@dimen/drawable_padding_main_screen_sign_button</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">@dimen/default_text_size_medium</item>
     </style>
 
-    <style name="AppWidget.Button.Raised.MainScreenSignButton" parent="Widget.AppCompat.Button.Colored">
+    <style name="AppWidget.Button.Raised.White.ConnectAccount" parent="Widget.AppCompat.Button.Colored">
         <item name="colorButtonNormal">@android:color/white</item>
     </style>
 
     <style name="AppWidget.Button.Raised.Green" parent="Widget.AppCompat.Button.Colored">
-        <item name="colorButtonNormal">@color/la_palma</item>
-    </style>
-
-    <style name="AppWidget.Button.Raised.Grey" parent="Widget.AppCompat.Button.Colored">
-        <item name="colorButtonNormal">@color/silver</item>
+        <item name="colorButtonNormal">@color/colorPrimary</item>
     </style>
 
     <style name="AppWidget.RadioButton" parent="AppTheme">
-        <item name="colorAccent">@color/la_palma</item>
+        <item name="colorAccent">@color/colorPrimary</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -63,7 +63,7 @@
 
     <style name="PreferenceTheme" parent="PreferenceThemeOverlay.v14.Material">
         <item name="preferenceStyle">@style/AppTheme.Preference</item>
-        <item name="android:textColor">@color/dove_gray</item>
+        <item name="android:textColor">@color/dark</item>
         <item name="android:textSize">@dimen/default_text_size_big</item>
     </style>
 
@@ -83,4 +83,14 @@
         <item name="android:textColor">@color/white_transparent</item>
         <item name="textAllCaps">false</item>
     </style>
+
+    <style name="ScreenHeading">
+        <item name="android:textSize">@dimen/text_size_screen_heading</item>
+        <item name="android:textColor">@color/dark</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/margin_top_screen_heading</item>
+    </style>
+
 </resources>
